Fix irritating visual bug where link icon sometimes wraps to next line

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -82,6 +82,10 @@ footer.page-footer
     border-bottom: 1px dashed lighten($header-footer-background, 20%)
     color: $header-footer-link-color
 
+    &:hover
+      border-bottom-style: solid
+      text-decoration: none
+
 header.page-header.timeline-page
   padding-bottom: 0
 
@@ -251,11 +255,11 @@ div.content-wrapper
 
   h2 button
     .fa-link
+      position: absolute
       visibility: hidden
-      margin-left: 10px
       color: $timestamp-color
       font-size: 60%
-      vertical-align: middle
+      margin: 5px 0 0 5px
 
     &:hover .fa-link
       visibility: visible
@@ -269,7 +273,7 @@ div.content-wrapper
       white-space: nowrap
       position: absolute
       padding: 0px 5px
-      margin-left: 5px
+      margin-left: 25px
       background-color: transparentize($card-background, 0.3)
 
   p, ul
